#1214 Made Inner Program

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chance": "^1.1.0",
     "@types/jest": "^26.0.19",
     "@types/mkdirp": "^1.0.1",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.12",
     "@types/rimraf": "^3.0.0",
     "jest": "^26.6.3",
@@ -23,6 +24,7 @@
   "dependencies": {
     "chance": "^1.1.7",
     "mkdirp": "^1.0.4",
+    "mongodb": "^3.6.3",
     "rimraf": "^3.0.2"
   },
   "jest": {
