--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "TSproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "ts-node src"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chance": "^1.1.7",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mkdirp": "^1.0.4",
     "mongodb": "^3.6.3",
     "rimraf": "^3.0.2"
